--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -27,6 +27,17 @@ provider:
   region: us-east-1
   memorySize: 128
   timeout: 30
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource:
+        - { "Fn::GetAtt": ["DocsTable", "Arn" ] }
   environment: 
     APP_ENV: ${self:custom.stage}
 functions:
